--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -4,7 +4,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:CommandsGroup="clr-namespace:ILSpyVisualizer.Common.CommandsGroup" mc:Ignorable="d" 
+             xmlns:CommandsGroup="clr-namespace:ILSpyVisualizer.Common.CommandsGroup" mc:Ignorable="d"
+             xmlns:Controls="clr-namespace:ILSpyVisualizer.Controls"
              d:DesignHeight="300" d:DesignWidth="300"
              Background="White">
     <UserControl.Resources>
@@ -117,7 +118,7 @@
                         </Style.Triggers>
                     </Style>
                 </TextBlock.Style>
-            </TextBlock>
+            </TextBlock>            
             <TextBox x:Name="txtSearch"                     
                      Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}" 
                      FontSize="20"
@@ -132,7 +133,7 @@
                         </Style.Triggers>
                     </Style>
                 </TextBox.Style>
-            </TextBox>            
+            </TextBox>
         </Grid>
 
         <!--Search filters-->
