Dependency Browser: Added graph control handles, fixed issue with single item in graph

--- a/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
@@ -33,8 +33,7 @@
     <Window.CommandBindings>
         <CommandBinding Command="Search" Executed="SearchExecuted"/>
     </Window.CommandBindings>
-    <Grid UseLayoutRounding="True"
-          TextOptions.TextFormattingMode="Display">      
+    <Grid>      
 
         <!--Content-->  
         <UserControls:ScreenPresenter Screen="{Binding Screen}"
