--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -7,7 +7,9 @@
              xmlns:CommandsGroup="clr-namespace:ILSpyVisualizer.Common.CommandsGroup" mc:Ignorable="d"
              xmlns:Controls="clr-namespace:ILSpyVisualizer.Controls"
              d:DesignHeight="300" d:DesignWidth="300"
-             Background="White">
+             Background="White"
+             UseLayoutRounding="True"
+             TextOptions.TextFormattingMode="Display">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
